--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -141,7 +141,8 @@ int f(int x) {
   \item \href{https://www.veracode.com/}{Veracode} (US)
   \item \href{https://snyk.io/}{Snyk} (US)
   \item \href{https://pvs-studio.com/en/pvs-studio/}{PVS-Studio} (Russia)
-  \end{itemize}}
+  \end{itemize}\par
+  Usually it's up to \ul{\$3,000} per developer per year.}
 
 \pitch{
   \pptBanner{SARIF}
