--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -162,6 +162,12 @@ int f(int x) {
   \source{tomasdottir2018adoption}}
 
 \qte
+  [Nachiappan Nagappan]
+  {../13-code-churn/nachiappan-nagappan.jpg}
+  {Our results show that the static analysis defect density is \ul{correlated} at statistically significant levels to the pre-release defect density determined by various testing activities. Further, the static analysis defect density can be used to \ul{predict} the pre-release defect density with a high degree of sensitivity.}
+  {tomasdottir2018adoption}
+
+\qte
   [\nospell{Florian Oberm{\"u}ller}]
   {florian-obermuller.jpg}
   {We introduce the concept of \ul{code perfumes} as the counterpart to \ul{code smells}, indicating the correct application of programming practices considered to be good. Using a catalogue of 25 code perfumes for, we empirically demonstrate that these represent frequent practices in, and we find that better programs indeed contain more code perfumes.}
