--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -104,6 +104,12 @@ int f(int x) {
 \end{multicols}
 \plush{}
 
+\qte
+  [Nachiappan Nagappan]
+  {../13-code-churn/nachiappan-nagappan.jpg}
+  {Our results show that the static analysis defect density is \ul{correlated} at statistically significant levels to the pre-release defect density determined by various testing activities. Further, the static analysis defect density can be used to \ul{predict} the pre-release defect density with a high degree of sensitivity.}
+  {nagappan2005static}
+
 \plush{\pptBanner{Why do JavaScript developers use linters?}
 \begin{itemize}
   \setlength\itemsep{0em}
@@ -160,12 +166,6 @@ int f(int x) {
   {tomasdottir2018adoption}
 \pitch{\includegraphics[width=.95\linewidth]{rules.png}
   \source{tomasdottir2018adoption}}
-
-\qte
-  [Nachiappan Nagappan]
-  {../13-code-churn/nachiappan-nagappan.jpg}
-  {Our results show that the static analysis defect density is \ul{correlated} at statistically significant levels to the pre-release defect density determined by various testing activities. Further, the static analysis defect density can be used to \ul{predict} the pre-release defect density with a high degree of sensitivity.}
-  {tomasdottir2018adoption}
 
 \qte
   [\nospell{Florian Oberm{\"u}ller}]
