--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -137,7 +137,7 @@ int f(int x) {
     \href{https://spotbugs.github.io/}{SpotBugs},
     \href{https://checkstyle.sourceforge.io/}{Checkstyle},
     \href{https://pmd.github.io/}{PMD},
-    \href{https://www.qulice.com}{Qulice}\citep{bugayenko2014blog0813} for Java
+    \href{https://www.qulice.com}{Qulice} for Java
   \item C++:
     \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy}
   \item Rust:
@@ -150,7 +150,8 @@ int f(int x) {
   \item Symbolic Execution
   \item Model Checking
   \item Taint Analysis
-  \end{itemize}}
+  \end{itemize}\par
+  You may want to watch my ``\href{https://github.com/yegor256/ppa}{Practical Program Analysis}'' course.}
 
 \plush{\pptBanner{For some tools you have to pay:}
 \begin{itemize}
