--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -34,7 +34,7 @@
   {johnson1977lint}
 \pitch{
   \begin{multicols}{2}
-  \includegraphics[width=.95\linewidth]{lint-material.jpg}
+  \includegraphics[width=.95\linewidth]{lint-material.png}
   \par\columnbreak\par
   ``This is \ul{dryer lint}, which is scraped out of a clothes dryer filter after it's dried a few loads. The idea of the Lint tool is to get this sort of stuff out of your code by being very pedantic about warnings and advice on possible bad code constructions.'' ---
   \href{https://www.quora.com/In-programming-where-does-the-term-lint-come-from}{Quora}
