--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -36,7 +36,7 @@
   \begin{multicols}{2}
   \includegraphics[width=.95\linewidth]{lint-material.png}
   \par\columnbreak\par
-  ``This is \ul{dryer lint}, which is scraped out of a clothes dryer filter after it's dried a few loads. The idea of the Lint tool is to get this sort of stuff out of your code by being very pedantic about warnings and advice on possible bad code constructions.'' ---
+  ``This is \ul{dryer lint}, which is scraped out of a clothes dryer filter after it has dried a few loads. The idea of the Lint tool is to get this sort of stuff out of your code by being very pedantic about warnings and advice on possible bad code constructions.'' ---
   \href{https://www.quora.com/In-programming-where-does-the-term-lint-come-from}{Quora}
   \end{multicols}}
 
@@ -168,6 +168,7 @@ int f(int x) {
     \href{https://spotbugs.github.io/}{SpotBugs},
     \href{https://checkstyle.sourceforge.io/}{Checkstyle},
     \href{https://pmd.github.io/}{PMD},
+    and
     \href{https://www.qulice.com}{Qulice} for Java
   \item C++:
     \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy}
