--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -59,7 +59,6 @@ int y = x + 42;
 print(y);
 \end{ffcode}
 }
-
 \par\columnbreak\par
 Division by Zero:\par
 {\small\begin{ffcode}
@@ -162,6 +161,12 @@ int f(int x) {
 \textcolor{red}{\nospell{\textbf{F}alse \textbf{N}egative}} (FN): \\ ``No errors at all''\par
 \end{multicols}
 \plush{}
+
+\qte
+  [Sunghun Kim]
+  {sunghun-kim.jpg}
+  {About \ul{90\%} of warnings remain in the program or are removed during non-fix changes --- likely \ul{false positive} warnings.}
+  {kim2007warnings}
 
 \qte
   [Nachiappan Nagappan]
