--- a/main.bib
+++ b/main.bib
@@ -1037,3 +1037,11 @@
   year = {2023},
   note = {[Online; accessed 08-03-2024]}
 }
+
+@inproceedings{kim2007warnings,
+  title={{Which Warnings Should I Fix First?}},
+  author={Kim, Sunghun and Ernst, Michael D.},
+  booktitle={{Proceedings of the the 6th Joint Meeting of the European Software Engineering Conference}},
+  pages={45--54},
+  year={2007}
+}
