--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Comments Density}
 \begin{document}
 
-\plush{\sqmTitlePage{19}{}}
+\plush{\sqmTitlePage{19}{4_SNhBeyato}}
 
 \qte
   [Brian Kernighan]
