--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -198,6 +198,12 @@ int f(int x) {
   {kim2007warnings}
 
 \qte
+  [Steven Arzt]
+  {steven-arzt.jpg}
+  {In our experiments on DroidBench examples, TASMAN \ul{reduces} the number of false positives by about 80\% \ul{without pruning} any true positives.}
+  {arzt2015using}
+
+\qte
   [Nachiappan Nagappan]
   {../13-code-churn/nachiappan-nagappan.jpg}
   {Our results show that the static analysis defect density is \ul{correlated} at statistically significant levels to the pre-release defect density determined by various testing activities. Further, the static analysis defect density can be used to \ul{predict} the pre-release defect density with a high degree of sensitivity.}
