--- a/main.bib
+++ b/main.bib
@@ -1045,3 +1045,11 @@
   pages={45--54},
   year={2007}
 }
+
+@inproceedings{arzt2015using,
+  title={{Using Targeted Symbolic Execution for Reducing False-Positives in Dataflow Analysis}},
+  author={Arzt, Steven and Rasthofer, Siegfried and Hahn, Robert and Bodden, Eric},
+  booktitle={Proceedings of the 4th International Workshop on State of the Art in Program Analysis},
+  pages={1--6},
+  year={2015}
+}
