--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -29,7 +29,11 @@
 
 \thought{Some programmers mistakenly feel proud of higher complexity of their code.}
 
-\pitch{\pptQuote{thomas-mccabe.jpg}{Cyclomatic Complexity (CC) is a count of the number of decisions in the source code. The higher the count, the more complex the code. The formula is simple: \(C=E-N+2\).}{Thomas~J.~McCabe,~Sr, 1976}}
+\qte
+  [Thomas J. McCabe]
+  {thomas-mccabe.jpg}
+  {Cyclomatic Complexity (CC) is a count of the number of decisions in the source code. The higher the count, the more complex the code. The formula is simple: \(C=E-N+2\).}
+  {mccabe1976complexity}
 
 \plush{
 \pptBanner{What is the complexity of this program?}
