--- a/main.bib
+++ b/main.bib
@@ -1053,3 +1053,13 @@
   pages={1--6},
   year={2015}
 }
+
+@article{mccabe1976complexity,
+  title={{A Complexity Measure}},
+  author={McCabe, Thomas J.},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={4},
+  pages={308--320},
+  year={1976},
+  publisher={IEEE}
+}
