--- a/main.bib
+++ b/main.bib
@@ -1063,3 +1063,28 @@
   year={1976},
   publisher={IEEE}
 }
+
+@inproceedings{campbell2018cognitive,
+  title={{Cognitive Complexity: An Overview and Evaluation}},
+  author={Campbell, G. Ann},
+  booktitle={{Proceedings of the International Conference on Technical Debt}},
+  pages={57--58},
+  year={2018}
+}
+
+@article{lavazza2023empirical,
+  title={{An Empirical Evaluation of the ``Cognitive Complexity'' Measure as a Predictor of Code Understandability}},
+  author={Lavazza, Luigi and Abualkishik, Abedallah Zaid and Liu, Geng and Morasca, Sandro},
+  journal={{Journal of Systems and Software}},
+  volume={197},
+  pages={111561},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@misc{campbell2017,
+  title={{\{Cognitive Complexity\} --- a new way of measuring understandability}},
+  author={Campbell, G. Ann},
+  publisher={Sonar},
+  year={2017}
+}
