--- a/main.bib
+++ b/main.bib
@@ -1088,3 +1088,38 @@
   publisher={Sonar},
   year={2017}
 }
+
+@inproceedings{chidamber1991towards,
+  title={{Towards a Metrics Suite for Object Oriented Design}},
+  author={Chidamber, Shyam R. and Kemerer, Chris F.},
+  booktitle={{Proceedings of the Conference on Object-Oriented Programming Systems, Languages, and Applications}},
+  pages={197--211},
+  year={1991}
+}
+
+@article{stevens1974structured,
+  title={{Structured Design}},
+  author={Stevens, Wayne P. and Myers, Glenford J. and Constantine, Larry L.},
+  journal={{IBM Systems Journal}},
+  volume={13},
+  number={2},
+  pages={115--139},
+  year={1974},
+  publisher={IBM}
+}
+
+@article{henderson1996coupling,
+  title={{Coupling and Cohesion (Towards a Valid Metrics Suite for Object-Oriented Analysis and Design)}},
+  author={Henderson-Sellers, Brian and Constantine, Larry L. and Graham, Ian M.},
+  journal={{Object Oriented Systems}},
+  volume={3},
+  number={3},
+  pages={143--158},
+  year={1996}
+}
+
+@book{hitz1995measuring,
+  title={{Measuring Coupling and Cohesion in Object-Oriented Systems}},
+  author={Hitz, Martin and Montazeri, Behzad},
+  year={1995}
+}
