move two refs to main.bib

--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -60,7 +60,11 @@ void main(Shape s)
 \end{pptWide}
 \plush{}
 
-\pitch{\pptBanner{CAMC}\pptQuote{jagdish-bansiya.jpg}{Cohesion Among Methods of Classes (CAMC) evaluates the relatedness of methods in the interface of a class using the parameter lists defined for the methods. It can be applied earlier in the development than can traditional cohesiveness metrics because it relies only on method prototypes declared in a class.}{\textit{A Class Cohesion Metric for Object-Oriented Designs}, \ul{Jagdish Bansiya}, Letha Etzkorn, Carl Davis and Wei Li, Journal of Object-Oriented Programming, vol.~11, no.~8, 1999}}
+\qte
+  [Jagdish Bansiya]
+  {jagdish-bansiya.jpg}
+  {\textbf{CAMC}: Cohesion Among Methods of Classes (CAMC) evaluates the relatedness of methods in the interface of a class using the parameter lists defined for the methods. It can be applied earlier in the development than can traditional cohesiveness metrics because it relies only on method prototypes declared in a class.}
+  {bansiya1999class}
 
 \plush{\begin{pptWide}{2}
 \includegraphics[width=\columnwidth]{nhd-1.png}\par
@@ -71,7 +75,11 @@ void main(Shape s)
 \includegraphics[width=.9\columnwidth]{nhd-2.png}\par
 \end{pptWide}}
 
-\pitch{\pptBanner{NHD}\pptQuote{steve-counsell.jpg}{The hamming distance (HD) provides a measure of disagreement between rows in a binary matrix. The Normalised Hamming Distance (NHD) metric measures agreement between rows in a binary matrix.}{\textit{The Interpretation and utility of three cohesion metrics for object-oriented design}, \ul{Steve Counsell}, Stephen Swift, Jason Crampton, ACM Transactions on Software Engineering and Methodology (TOSEM), vol.~15, no.~2, 2006}}
+\qte
+  [Steve Counsell]
+  {steve-counsell.jpg}
+  {\textbf{NHD}: The hamming distance (HD) provides a measure of disagreement between rows in a binary matrix. The Normalised Hamming Distance (NHD) metric measures agreement between rows in a binary matrix.}
+  {counsell2006interpretation}
 
 \plush{\begin{pptWide}{2}
 \includegraphics[width=\columnwidth]{nhd-1.png}\par
