--- a/main.bib
+++ b/main.bib
@@ -1123,3 +1123,24 @@
   author={Hitz, Martin and Montazeri, Behzad},
   year={1995}
 }
+
+@article{counsell2006interpretation,
+  title={{The Interpretation and Utility of Three Cohesion Metrics for Object-Oriented Design}},
+  author={Counsell, Steve and Swift, Stephen and Crampton, Jason},
+  journal={{ACM Transactions on Software Engineering and Methodology (TOSEM)}},
+  volume={15},
+  number={2},
+  pages={123--149},
+  year={2006},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{bansiya1999class,
+  title={{Class Cohesion Metric for Object Oriented Designs}},
+  author={Bansiya, Jagdish},
+  journal={{Journal of Object-Oriented Programming}},
+  volume={11},
+  number={8},
+  pages={47--52},
+  year={1999}
+}
