--- a/main.bib
+++ b/main.bib
@@ -1132,7 +1132,8 @@
   number={2},
   pages={123--149},
   year={2006},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/1131421.1131422}
 }
 
 @article{bansiya1999class,
