--- a/main.bib
+++ b/main.bib
@@ -1023,13 +1023,6 @@
   publisher={IEEE}
 }
 
-@misc{arguelles2020,
-  title={{Code Coverage Best Practices}},
-  author={Arguelles, Carlos and Ivankovi{\'c}, Marko and Bender, Adam},
-  year={2020},
-  url={https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}
-}
-
 @misc{sarif2023,
   author = {OASIS},
   title = {{Static Analysis Results Interchange Format (SARIF) Version 2.1.0 Plus Errata 01}},
@@ -1144,4 +1137,15 @@
   number={8},
   pages={47--52},
   year={1999}
+}
+
+@article{bieman1995cohesion,
+  title={{Cohesion and Reuse in an Object-Oriented System}},
+  author={Bieman, James M. and Kang, Byung-Kyoo},
+  journal={{SIGSOFT Software Engineering Notes}},
+  volume={20},
+  number={SI},
+  pages={259--262},
+  year={1995},
+  publisher={ACM New York, NY, USA}
 }
