--- a/sqm.sty
+++ b/sqm.sty
@@ -33,6 +33,7 @@
 \RequirePackage[nocn,novert]{ffcode}
 \RequirePackage{bibentry}
 \RequirePackage{natbib}
+\RequirePackage{doi}
 \RequirePackage{booktabs}
 \RequirePackage{tikz}
   \usetikzlibrary{positioning,calc,arrows,arrows.meta}
