--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -29,7 +29,11 @@
 
 \pitch{\pptQuote{edward-yourdon.jpg}{Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}{\ul{Edward Yourdon} and Larry Constantine, \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}, Prentice Hall, 1979}}
 
-\pitch{\pptQuote{james-bieman.jpg}{We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}{\ul{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
+\qte
+  [James M. Bieman]
+  {james-bieman.jpg}
+  {We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}
+  {bieman1995cohesion}
 
 \pptBanner{Tight and Loose Class Cohesion (TCC+LCC)}
 \begin{multicols}{2}
@@ -62,7 +66,10 @@ Indirectly connected (\(\texttt{NIC}=2\)): \\
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{paper.png}{If a class is designed in \ul{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \ul{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}{\ul{James M. Bieman} and Byung-Kyoo Kang, \textit{Cohesion and Reuse in an Object-Oriented System}, Proceedings of the Symposium on Software Reusability (SSR), 1995}}
+\qte
+  {paper.png}
+  {If a class is designed in \ul{ad hoc manner} and unrelated components are included in the class, the class represents more than one concept and does not \ul{model an entity}. The cohesion value of such a class is likely to be less than 0.5.}
+  {bieman1995cohesion}
 
 \qte
   [Steve McConnell]
@@ -171,15 +178,9 @@ class Article
 \plush{
   \pptBanner{Read this:}\par
   \small
-  \textit{Cohesion and Reuse in an Object-Oriented System},
-    James M. Bieman and Byung-Kyoo Kang,
-    Proceedings of the Symposium on Software Reusability (SSR), 1995 \par
   \textit{Code Complete},
     Steven McConnell,
     2004\par
-  \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design},
-    Edward Yourdon and Larry Constantine,
-    Prentice Hall, 1979\par
   \href{https://www.yegor256.com/2016/09/13/inheritance-is-procedural.html}{Inheritance Is a Procedural Technique for Code Reuse} (2016)
 }
 
