--- a/main.bib
+++ b/main.bib
@@ -1149,3 +1149,9 @@
   year={1995},
   publisher={ACM New York, NY, USA}
 }
+
+@article{curtis1979,
+  author = {Curtis, Bill},
+  title = {Program Complexity and Software Errors: A Front End for Reliability},
+  year = {1979}
+}
